[package]
name = "spacepls"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_setters = "0.1.6"
http-body-util = "0.1.0"
reqwest = "0.11.24"
hyper = "1.2.0"
anyhow = "1.0.80"
serde_json = "1.0.114"
async-trait = "0.1.77"
bytes = "1.5.0"
schemars = "0.8.16"
serde = "1.0.197"
futures-util = "0.3.30"
url = "2.5.0"
base64 = "0.22.0"
tokio = {version = "1.36.0",features = ["macros"]}
const-str = "0.5.6"
lazy_static = "1.4.0"

[workspace]
members = [
    ".",
    "cli"
]
