[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["rt","rt-multi-thread", "fs"] }
hyper = {version = "1.2.0",features = ["server", "http1"]}
http-body-util = "0.1.0"
reqwest = "0.11.24"
mimalloc = "0.1.39"
http-cache-reqwest = { version = "0.13.0", features = [
    "manager-moka",
], default-features = false }
reqwest-middleware = "0.2.4"

spacepls = {path = ".."}
anyhow = "1.0.80"
env_logger = "0.11.2"
async-trait = "0.1.77"
log = "0.4.21"
webbrowser = { version = "0.8.12", features = ["hardened", "disable-wsl"] }
hyper-util = {version = "0.1.3",features = ["tokio"]}
clap = { version = "4.5.1", features = ["derive"] }


[dev-dependencies]
httpmock = "0.7.0"
tempfile = "3.10.1"
